--- a/Tion_IT13B_activities/nbproject/project.properties
+++ b/Tion_IT13B_activities/nbproject/project.properties
@@ -35,7 +35,8 @@ dist.jlink.output=${dist.jlink.dir}/Tion_IT13B_activities
 excludes=
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
